<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:id="@+id/fragment_input"
            android:drawableStart="@drawable/terminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/information"
            android:background="@color/colorGray"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="Company : "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="@string/company"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="Author : "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="@string/author"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="E-mail : "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="@string/email"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="Version : "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="@string/version"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:background="?attr/colorControlHighlight"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"/>

            <TextView
                android:textSize="11sp"
                android:id="@+id/textView102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tip"
                android:fontFamily="monospace"/>

            <LinearLayout
                android:orientation="vertical"
                android:background="?attr/colorControlHighlight"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:gravity="left"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="1.0"/>
            <TextView
                android:textSize="12sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-  Satellite map view"/>
            <TextView
                android:textSize="12sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-  Rinex 3.02 logger"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="left"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="1.1"/>
            <TextView
                android:textSize="12sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-  Perform Rinex 3.02 data correction : C1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Button
            android:id="@+id/fragment_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/share" />

    </LinearLayout>

</LinearLayout>